--- a/day-06-sample-code/spring-conditional-sample/src/main/resources/application.properties
+++ b/day-06-sample-code/spring-conditional-sample/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.context-path=/weisting
 server.port=8080
 
+spring.banner.location=classpath:/banner.txt
 sw.spring.conditional.assert=true
