--- a/day-29-sample-code/spring-sample-actuator/src/main/resources/application-prod.properties
+++ b/day-29-sample-code/spring-sample-actuator/src/main/resources/application-prod.properties
@@ -29,3 +29,30 @@ spring.task.pool.maxPoolSize = 50
 spring.task.pool.keepAliveSeconds= 60
 spring.task.pool.queueCapacity = 10000
 spring.task.pool.threadNamePrefix = Wesiting-Thread-
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-methods=OPTIONS, GET, POST
+management.endpoints.web.cors.allowed-headers=*
+endpoints.sensitive=true
+endpoints.actuator.enabled=true
+management.endpoints.enabled-by-default= true
+management.endpoints.enabled = true
+management.endpoint.shutdown.enabled=true
+endpoints.shutdown.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.info.show-details=always
+management.endpoint.metrics.show-details=always
+spring.boot.admin.probed-endpoints = "health", "env", "metrics",
+###### actuator info ######
+info.app.name=Spring Sea Food Order System
+info.app.description=
+info.app.version=v1.0.1
+info.java.vendor=${java.specification.vendor}
+info.java.version=${java.specification.version}
+info.java.name=${java.specification.name}
+info.java.version_date=${java.version.date}
+info.java.runtime_name=${java.runtime.name}
+info.java.runtime_version=${java.runtime.version}
+info.java.runtime_class_verion=${java.class.version}
+info.java.vm_info=${java.vm.info}
